--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -83,6 +83,28 @@ jobs:
         run: yarn install
       - name: Run lint check
         run: yarn lint
+  unused_imports:
+    name: Unused imports
+    runs-on: ubuntu-latest
+    env:
+      CI: true
+    defaults:
+      run:
+        working-directory: 'frontend/'
+    steps:
+      - uses: actions/checkout@v2
+      - name: Cache dependencies
+        id: cache-deps
+        uses: actions/cache@v2
+        with:
+          path: frontend/node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: ${{ runner.os }}-yarn-
+      - name: Install dependencies
+        if: steps.cache-deps.outputs.cache-hit != 'true'
+        run: yarn install
+      - name: Run unimported
+        run: yarn unimported
   graphql_codegen:
     name: GraphQL Codegen
     runs-on: ubuntu-latest
