--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "tsc": "tsc",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory='coverage'",
     "lint": "eslint src --ext .ts,.tsx --cache --max-warnings=0 && prettier src --check",
@@ -14,7 +13,9 @@
     "codegen": "graphql-codegen --config codegen.yml",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "chromatic"
+    "chromatic": "chromatic",
+    "tsc": "tsc",
+    "unimported": "unimported"
   },
   "babelMacros": {
     "twin": {
@@ -96,6 +97,7 @@
     "snowpack": "3.0.13",
     "typedoc": "^0.20.24",
     "typescript": "^4.1.3",
+    "unimported": "^1.11.0",
     "wait-port": "^0.2.9"
   },
   "browserslist": {
