Update unimported config file

--- a/frontend/.unimportedrc.json
+++ b/frontend/.unimportedrc.json
@@ -4,5 +4,9 @@
   "ignoreUnresolved": [],
   "ignoreUnimported": [],
   "ignoreUnused": ["@emotion/styled", "csstype", "tailwindcss", "web-vitals"],
-  "ignorePatterns": []
+  "ignorePatterns": [
+    "**/node_modules/**",
+    "**/*.stories.{ts,tsx}",
+    "**/*.test.{ts,tsx}"
+  ]
 }
