--- a/frontend/package.json
+++ b/frontend/package.json
@@ -89,6 +89,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^6.0.1",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
+    "eslint-plugin-unused-imports": "^1.1.1",
     "http-proxy": "^1.18.1",
     "jest": "^26.6.3",
     "postcss": "^8.2.6",
