--- a/.github/src/backend.yml
+++ b/.github/src/backend.yml
@@ -56,8 +56,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: {{ "${{ runner.os }}-python-3.9.5-${{ hashFiles('**/poetry.lock') }}" }}
-          restore-keys: {{ "${{ runner.os }}-poetry-" }}
+          key: {{ "${{ runner.os }}-python-3.9.5-v2-${{ hashFiles('**/poetry.lock') }}" }}
+          restore-keys: {{ "${{ runner.os }}-python-3.9.5-v2-" }}
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
