Edit server configuration in settings (#258)
This is more of an introduction to a WIP. I don't want to spend the time
making this look and feel good right now. Before 0.2.0 I will go around
and polish things up a bit.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,7 +15,6 @@ repertoire = "src.__main__:run"
 python = "^3.9"
 ariadne = "^0.12.0"
 click = "^7.1.2"
-huey = "^2.3.0"
 Pillow = "^8.1.0"
 python-dotenv = "^0.15.0"
 Quart = "^0.14.1"
@@ -23,6 +22,8 @@ requests = "^2.25.1"
 tagfiles = "^0.3.3"
 voluptuous = "^0.12.1"
 yoyo-migrations = "^7.3.1"
+# The dependency doesn't auto-update to the lockfile version if I specify master branch.
+huey = { git = "https://github.com/azuline/huey.git", rev = "f46b1490e0854bc9c606a4ac023f651fd600a0dc" }
 
 [tool.poetry.dev-dependencies]
 autodocsumm = "^0.2.2"
