--- a/.github/src/backend.yml
+++ b/.github/src/backend.yml
@@ -45,10 +45,10 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: {{ "${{ runner.os }}-poetry-1.1.4" }}
+          key: {{ "${{ runner.os }}-poetry-1.1.6" }}
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
-        run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
+        run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.6/get-poetry.py | python -
       - name: Configure environment
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
       - name: Cache dependencies
@@ -56,8 +56,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: {{ "${{ runner.os }}-python-3.9.5-${{ hashFiles('**/poetry.lock') }}" }}
-          restore-keys: {{ "${{ runner.os }}-poetry-" }}
+          key: {{ "${{ runner.os }}-python-3.9.5-v2-${{ hashFiles('**/poetry.lock') }}" }}
+          restore-keys: {{ "${{ runner.os }}-python-3.9.5-v2-" }}
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
