--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -44,6 +44,7 @@ flake8 = "^3.8.4"
 pytest-xdist = "^2.2.1"
 filelock = "^3.0.12"
 semgrep = "^0.53.0"
+pip-audit = "^1.1.0"
 
 [tool.black]
 line-length = 88
