--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,34 +1,34 @@
-aiofiles==0.7.0; python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.7.0"
+aiofiles==0.8.0; python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.7.0"
 ariadne==0.12.0
 blinker==1.4; python_full_version >= "3.7.0"
-certifi==2021.5.30; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
-charset-normalizer==2.0.4; python_full_version >= "3.6.0" and python_version >= "3"
+certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
+charset-normalizer==2.0.10; python_full_version >= "3.6.0" and python_version >= "3"
 click==7.1.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-graphql-core==3.0.5; python_version >= "3.6" and python_version < "4"
-h11==0.12.0; python_version >= "3.7" and python_full_version >= "3.7.0"
-h2==4.0.0; python_version >= "3.7" and python_full_version >= "3.7.0"
+graphql-core==3.0.6; python_version >= "3.6" and python_version < "4"
+h11==0.13.0; python_version >= "3.7" and python_full_version >= "3.7.0"
+h2==4.1.0; python_version >= "3.7" and python_full_version >= "3.7.0"
 hpack==4.0.0; python_version >= "3.7" and python_full_version >= "3.7.0"
 huey @ git+https://github.com/azuline/huey.git@f46b1490e0854bc9c606a4ac023f651fd600a0dc
-hypercorn==0.11.2; python_version >= "3.7" and python_full_version >= "3.7.0"
+hypercorn==0.13.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 hyperframe==6.0.1; python_version >= "3.7" and python_full_version >= "3.7.0"
-idna==3.2; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
+idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
 itsdangerous==2.0.1; python_version >= "3.6" and python_full_version >= "3.7.0"
-jinja2==3.0.1; python_version >= "3.6" and python_full_version >= "3.7.0"
+jinja2==3.0.3; python_version >= "3.6" and python_full_version >= "3.7.0"
 markupsafe==2.0.1; python_version >= "3.6" and python_full_version >= "3.7.0"
 mutagen==1.45.1; python_version >= "3.6" and python_version < "4"
-pillow==8.3.2; python_version >= "3.6"
+pillow==8.4.0; python_version >= "3.6"
 priority==2.0.0; python_version >= "3.7" and python_full_version >= "3.7.0"
 python-dotenv==0.15.0
 quart==0.14.1; python_full_version >= "3.7.0"
-requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
-sqlparse==0.4.1; python_version >= "3.5"
+requests==2.27.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
+sqlparse==0.4.2; python_version >= "3.5"
 starlette==0.13.8; python_version >= "3.6"
 tabulate==0.8.9
 tagfiles==0.3.3; python_version >= "3.6" and python_version < "4.0"
 toml==0.10.2; python_version >= "3.7" and python_full_version >= "3.7.0"
-typing-extensions==3.10.0.2
-urllib3==1.26.6; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
-voluptuous==0.12.1
-werkzeug==2.0.1; python_version >= "3.6" and python_full_version >= "3.7.0"
+typing-extensions==4.0.1; python_version >= "3.6"
+urllib3==1.26.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
+voluptuous==0.12.2
+werkzeug==2.0.2; python_version >= "3.6" and python_full_version >= "3.7.0"
 wsproto==1.0.0; python_version >= "3.7" and python_full_version >= "3.7.0"
 yoyo-migrations==7.3.2
