--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "license": "AGPL-3.0",
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
+    "start": "vite",
+    "build": "vite build",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory='coverage'",
     "lint": "eslint src --ext .ts,.tsx --cache --max-warnings=0 && prettier src --check",
@@ -76,6 +76,8 @@
     "@types/react-virtualized": "^9.21.10",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "@vitejs/plugin-react": "^1.1.4",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-twin": "^1.0.2",
     "chromatic": "^5.8.3",
@@ -99,6 +101,8 @@
     "typedoc": "^0.20.24",
     "typescript": "^4.1.3",
     "unimported": "^1.11.0",
+    "vite": "^2.7.13",
+    "vite-plugin-babel-macros": "^1.0.5",
     "wait-port": "^0.2.9"
   },
   "browserslist": {
