--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,6 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "clsx": "^1.1.1",
-    "csstype": "^3.0.5",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -36,14 +35,12 @@
     "react-router-dom": "^5.2.0",
     "react-slider": "^1.1.2",
     "react-toast-notifications": "^2.4.0",
-    "react-virtualized": "^9.22.2",
-    "tailwindcss": "^2.0.1",
-    "twin.macro": "^2.3.3",
+    "react-virtualized": "^9.22.3",
+    "tailwindcss": "^3.0.15",
+    "twin.macro": "^2.8.2",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-transform-react-jsx": "^7.12.16",
     "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
     "@graphql-codegen/cli": "1.20.1",
     "@graphql-codegen/introspection": "1.18.1",
@@ -53,11 +50,6 @@
     "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
     "@graphql-codegen/typescript-operations": "1.17.14",
     "@graphql-codegen/typescript-react-apollo": "^2.2.1",
-    "@snowpack/app-scripts-react": "^2.0.0",
-    "@snowpack/plugin-babel": "^2.1.7",
-    "@snowpack/plugin-react-refresh": "^2.4.0",
-    "@snowpack/plugin-typescript": "^1.2.0",
-    "@snowpack/web-test-runner-plugin": "^0.2.0",
     "@storybook/addon-actions": "^6.1.21",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.21",
@@ -77,7 +69,6 @@
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "@vitejs/plugin-react": "^1.1.4",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-twin": "^1.0.2",
     "chromatic": "^5.8.3",
@@ -97,13 +88,14 @@
     "postcss": "^8.2.6",
     "prettier": "^2.2.1",
     "react-is": "^17.0.1",
-    "snowpack": "3.0.13",
     "typedoc": "^0.20.24",
     "typescript": "^4.1.3",
     "unimported": "^1.11.0",
     "vite": "^2.7.13",
-    "vite-plugin-babel-macros": "^1.0.5",
     "wait-port": "^0.2.9"
+  },
+  "resolutions": {
+    "react-virtualized": "git+https://git@github.com/remorses/react-virtualized-fixed-import.git#9.22.3"
   },
   "browserslist": {
     "production": [
