--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,6 +70,7 @@
     "@typescript-eslint/parser": "^5.10.0",
     "@vitejs/plugin-react": "^1.1.4",
     "babel-loader": "^8.2.2",
+    "babel-plugin-macros": "^3.1.0",
     "babel-plugin-twin": "^1.0.2",
     "chromatic": "^5.8.3",
     "eslint": "^7.17.0",
