--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,7 +14,6 @@ repertoire = "src.__main__:run"
 [tool.poetry.dependencies]
 python = "^3.9"
 ariadne = "^0.12.0"
-click = "^7.1.2"
 Pillow = "^8.1.0"
 python-dotenv = "^0.15.0"
 Quart = "^0.14.1"
@@ -24,10 +23,10 @@ voluptuous = "^0.12.1"
 yoyo-migrations = "^7.3.1"
 # The dependency doesn't auto-update to the lockfile version if I specify master branch.
 huey = { git = "https://github.com/azuline/huey.git", rev = "f46b1490e0854bc9c606a4ac023f651fd600a0dc" }
+click = "^8.0.4"
 
 [tool.poetry.dev-dependencies]
 autodocsumm = "^0.2.2"
-black = "^20.8b1"
 dephell = "^0.8.3"
 freezegun = "^1.1.0"
 isort = "^5.7.0"
@@ -48,6 +47,7 @@ pip-audit = "^1.1.0"
 
 # A higher version breaks dephell.
 mistune = "^0.8.4"
+black = "^22.1.0"
 
 [tool.black]
 line-length = 88
