--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,42 +12,46 @@ packages = [
 repertoire = "src.__main__:run"
 
 [tool.poetry.dependencies]
+Pillow = "^9.0.1"
+ariadne = "^0.14.1"
+click = "^8.0.4"
 python = "^3.9"
-ariadne = "^0.12.0"
-Pillow = "^8.1.0"
-python-dotenv = "^0.15.0"
-Quart = "^0.14.1"
-requests = "^2.25.1"
+python-dotenv = "^0.19.2"
+quart = "^0.16.3"
+requests = "^2.27.1"
 tagfiles = "^0.3.3"
-voluptuous = "^0.12.1"
-yoyo-migrations = "^7.3.1"
+voluptuous = "^0.12.2"
+yoyo-migrations = "^7.3.2"
 # The dependency doesn't auto-update to the lockfile version if I specify master branch.
 huey = { git = "https://github.com/azuline/huey.git", rev = "f46b1490e0854bc9c606a4ac023f651fd600a0dc" }
-click = "^8.0.4"
+
+# Transitive dependency pinning.
+# Quart doesn't support 3.1.0. 3.1.0 moves some imports to MarkupSafe.
+jinja2 = "3.0.3"
 
 [tool.poetry.dev-dependencies]
+Sphinx = "^3.5.1"
 autodocsumm = "^0.2.2"
+black = "^22.1.0"
 dephell = "^0.8.3"
+filelock = "^3.0.12"
+flake8 = "^3.8.4"
 freezegun = "^1.1.0"
 isort = "^5.7.0"
 mypy = "^0.812"
+pip-audit = "^1.1.0"
 pytest = "^6.2.2"
 pytest-asyncio = "^0.14.0"
 pytest-cov = "^2.11.1"
+pytest-xdist = "^2.2.1"
+semgrep = "^0.53.0"
 snapshottest = "^0.6.0"
-Sphinx = "^3.5.1"
 sphinx-autodoc-typehints = "^1.11.1"
 sphinx-rtd-theme = "^0.5.1"
 sphinxcontrib-httpdomain = "^1.7.0"
-flake8 = "^3.8.4"
-pytest-xdist = "^2.2.1"
-filelock = "^3.0.12"
-semgrep = "^0.53.0"
-pip-audit = "^1.1.0"
 
 # A higher version breaks dephell.
 mistune = "^0.8.4"
-black = "^22.1.0"
 
 [tool.black]
 line-length = 88
