Update derived artifacts

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,35 +1,37 @@
-aiofiles==0.8.0; python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.7.0"
-ariadne==0.12.0
-blinker==1.4; python_full_version >= "3.7.0"
+aiofiles==0.8.0; python_version >= "3.7" and python_version < "4.0"
+anyio==3.5.0; python_full_version >= "3.6.2" and python_version >= "3.6"
+ariadne==0.14.1
+blinker==1.4; python_version >= "3.7"
 certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
-charset-normalizer==2.0.10; python_full_version >= "3.6.0" and python_version >= "3"
+charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3"
 click==8.0.4; python_version >= "3.6"
-colorama==0.4.4; platform_system == "Windows" and python_version >= "3.6" and python_full_version >= "3.7.0"
-graphql-core==3.0.6; python_version >= "3.6" and python_version < "4"
-h11==0.13.0; python_version >= "3.7" and python_full_version >= "3.7.0"
-h2==4.1.0; python_version >= "3.7" and python_full_version >= "3.7.0"
-hpack==4.0.0; python_version >= "3.7" and python_full_version >= "3.7.0"
+colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
+graphql-core==3.1.7; python_version >= "3.6" and python_version < "4"
+h11==0.13.0; python_full_version >= "3.7.0" and python_version >= "3.7"
+h2==4.1.0; python_full_version >= "3.6.1" and python_version >= "3.7"
+hpack==4.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 huey @ git+https://github.com/azuline/huey.git@f46b1490e0854bc9c606a4ac023f651fd600a0dc
-hypercorn==0.13.2; python_version >= "3.7" and python_full_version >= "3.7.0"
-hyperframe==6.0.1; python_version >= "3.7" and python_full_version >= "3.7.0"
-idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-itsdangerous==2.0.1; python_version >= "3.6" and python_full_version >= "3.7.0"
-jinja2==3.0.3; python_version >= "3.6" and python_full_version >= "3.7.0"
-markupsafe==2.0.1; python_version >= "3.6" and python_full_version >= "3.7.0"
+hypercorn==0.13.2; python_version >= "3.7"
+hyperframe==6.0.1; python_full_version >= "3.6.1" and python_version >= "3.7"
+idna==3.3; python_full_version >= "3.6.2" and python_version >= "3.6"
+itsdangerous==2.1.2; python_version >= "3.7"
+jinja2==3.0.3; python_version >= "3.6"
+markupsafe==2.1.1; python_version >= "3.7"
 mutagen==1.45.1; python_version >= "3.6" and python_version < "4"
-pillow==8.4.0; python_version >= "3.6"
-priority==2.0.0; python_version >= "3.7" and python_full_version >= "3.7.0"
-python-dotenv==0.15.0
-quart==0.14.1; python_full_version >= "3.7.0"
+pillow==9.0.1; python_version >= "3.7"
+priority==2.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
+python-dotenv==0.19.2; python_version >= "3.5"
+quart==0.16.3; python_version >= "3.7"
 requests==2.27.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
+sniffio==1.2.0; python_full_version >= "3.6.2" and python_version >= "3.6"
 sqlparse==0.4.2; python_version >= "3.5"
-starlette==0.13.8; python_version >= "3.6"
+starlette==0.17.1; python_version >= "3.6"
 tabulate==0.8.9
 tagfiles==0.3.3; python_version >= "3.6" and python_version < "4.0"
-toml==0.10.2; python_version >= "3.7" and python_full_version >= "3.7.0"
-typing-extensions==4.0.1; python_version >= "3.6"
-urllib3==1.26.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
+toml==0.10.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
+typing-extensions==4.1.1; python_version >= "3.6"
+urllib3==1.26.9; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
 voluptuous==0.12.2
-werkzeug==2.0.2; python_version >= "3.6" and python_full_version >= "3.7.0"
-wsproto==1.0.0; python_version >= "3.7" and python_full_version >= "3.7.0"
+werkzeug==2.0.3; python_version >= "3.7"
+wsproto==1.1.0; python_full_version >= "3.7.0" and python_version >= "3.7"
 yoyo-migrations==7.3.2
